fix: add correct overflow to the board

--- a/src/views/Board/BoardPage.scss
+++ b/src/views/Board/BoardPage.scss
@@ -2,7 +2,7 @@
   margin-top: 50px;
 
   .Columns {
-    overflow-y: scroll;
+    overflow-y: auto;
     align-items: flex-start;
   }
   .add-column-button {
